force-app/main/default/objects/Transformation_Set__mdt/Transformation_Set__mdt.object-meta.xml
<CustomObject>
    <label>Transformation Set</label>
    <pluralLabel>Transformation Sets</pluralLabel>
</CustomObject>