force-app/main/default/objects/Transformation_Set__mdt/fields/From_SObject__c.field-meta.xml
<CustomField>
    <fullName>From_SObject__c</fullName>
    <label>From SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>