force-app/main/default/objects/Transformation_Set__mdt/fields/Lock_Record_s__c.field-meta.xml
<CustomField>
    <fullName>Lock_Record_s__c</fullName>
    <description>Best practice would be to put any fields which are lookups to other objects on the Source Object which are being transformed to fields in the transformation rules. Syntax is Field:SObject, comma separated, i.e. idField1:Account,idField2:Contact.</description>
    <inlineHelpText>Best practice would be to put any fields which are lookups to other objects on the Source Object which are being transformed to fields in the transformation rules. Syntax is Field:SObject, comma separated, i.e. idField1:Account,idField2:Contact.</inlineHelpText>
    <label>Lock Record(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>