force-app/main/default/objects/Transformation_Set__mdt/fields/On_Error_Field__c.field-meta.xml
<CustomField>
    <fullName>On_Error_Field__c</fullName>
    <description>When an error occurs set this field to the value of the &#39;On Error Value&#39;</description>
    <inlineHelpText>When an error occurs set this field to the value of the &#39;On Error Value&#39;</inlineHelpText>
    <label>On Error Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>