force-app/main/default/objects/Transformation_Set__mdt/fields/On_Error_Value__c.field-meta.xml
<CustomField>
    <fullName>On_Error_Value__c</fullName>
    <description>When an error occurs set this field named in &#39;On Error Field&#39; to this value</description>
    <inlineHelpText>When an error occurs set this field named in &#39;On Error Field&#39; to this value</inlineHelpText>
    <label>On Error Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>